feat: add text/plain and vendor specific JSON media types support (#97)
Signed-off-by: Paolo Patierno <ppatierno@live.com>