@@ -14,8 +14,8 @@ package io.vertx.openapi.contract;
 
 import io.vertx.codegen.annotations.VertxGen;
 import io.vertx.json.schema.JsonSchema;
+import io.vertx.openapi.contract.impl.VendorSpecificJson;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -33,11 +33,17 @@ public interface MediaType extends OpenAPIObject {
   String MULTIPART_FORM_DATA = "multipart/form-data";
   String APPLICATION_HAL_JSON = "application/hal+json";
   String APPLICATION_OCTET_STREAM = "application/octet-stream";
-  List<String> SUPPORTED_MEDIA_TYPES = Arrays.asList(APPLICATION_JSON, APPLICATION_JSON_UTF8, MULTIPART_FORM_DATA,
-    APPLICATION_HAL_JSON, APPLICATION_OCTET_STREAM);
+  String TEXT_PLAIN = "text/plain";
+  String TEXT_PLAIN_UTF8 = TEXT_PLAIN + "; charset=utf-8";
+  List<String> SUPPORTED_MEDIA_TYPES = List.of(APPLICATION_JSON, APPLICATION_JSON_UTF8, MULTIPART_FORM_DATA,
+    APPLICATION_HAL_JSON, APPLICATION_OCTET_STREAM, TEXT_PLAIN, TEXT_PLAIN_UTF8);
 
   static boolean isMediaTypeSupported(String type) {
-    return SUPPORTED_MEDIA_TYPES.contains(type.toLowerCase());
+    return SUPPORTED_MEDIA_TYPES.contains(type.toLowerCase()) || isVendorSpecificJson(type);
+  }
+
+  static boolean isVendorSpecificJson(String type) {
+    return VendorSpecificJson.matches(type);
   }
 
   /**
